<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="moviename">Movie Name</string>
    <string name="moviedes">Movie Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="updatemovie">Update Movie</string>
    <string name="deletemovie">Delete Movie</string>

</resources>
