<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/ed3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/moviename"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/ed4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/moviedes"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:ems="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/b2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="#0000ff"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#0000ff"
            android:text="@string/updatemovie" />
    </LinearLayout>

</LinearLayout>
